@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19941006
+MANIFEST for ded, version t19941016
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
